# server

./: CMakeLists.txt  README.md
cmake/: ImportACE.cmake
src/: CMakeLists.txt
src/framework/: CMakeLists.txt
src/framework/Platform/: CompilerDefs.h  Define.h
src/mangosd/: CMakeLists.txt  Main.cpp
src/shared/: CMakeLists.txt  SystemConfig.h.in
